# Groww_weekly_pulse

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
.github/workflows/: pulse_schedule.yml
Docs/: architecture.md  deployment-plan.md  edge-cases.md  implementation-plan.md  problemStatement.md  problem_statement.txt
Fotmob_Design/: DESIGN.md  code.html
data/: audit_log.jsonl
data/processed/: com.nextbillion.groww_2026-06-10_230139_scrubbed.json
data/raw/: com.nextbillion.groww_2026-06-10_225233.json  com.nextbillion.groww_2026-06-10_230139.json
data/reports/: pulse_report_groww_2026-06-17_000055.json  pulse_report_groww_2026-06-20_165610.json  pulse_report_groww_2026-06-20_170518.json  pulse_report_groww_2026-06-20_194145.json  pulse_report_groww_2026-06-20_194848.json  pulse_report_groww_2026-06-20_195300.json  pulse_report_groww_2026-06-22_084252.json  pulse_report_groww_2026-06-29_071510.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  CreateReportModal.jsx  Dashboard.jsx  Sidebar.jsx  ThemeCard.jsx  index.css
scripts/: run_pipeline.py
src/pulse/: __init__.py  api.py  auditing.py  cli.py  config.py  pipeline.py
src/pulse/ingestion/: __init__.py  play_store.py
src/pulse/models/: __init__.py  domain.py
src/pulse/output/: __init__.py  github_client.py  mcp_client.py  renderer.py
src/pulse/processing/: __init__.py  embedder.py  sanitizer.py
src/pulse/reasoning/: __init__.py  clustering.py  llm.py  orchestrator.py
